--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header class="heading">
-        <a href="./index.html" class="heading-logo">WebStudio</a>
+        <a href="./index.html" class="heading-logo">Web<span class="heading-studio">Studio</span></a>
         <nav class="heading-nav">
             <ul class="heading-list">
-                <li class="heading-item"><a href="" class="heading-link">Студия</a></li>
+                <li class="heading-item"><a href="./index.html" class="heading-link">Студия</a></li>
                 <li class="heading-item"><a href="./portfolio.html" class="heading-link">Портфолио</a></li>   
                 <li class="heading-item"><a href="" class="heading-link">Контакты</a></li>
             </ul>
@@ -135,7 +135,7 @@
         </section>
         </main>
         <footer class="footer">
-            <a href="" class="footer-logo">WebStudio</a>
+            <a href="" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
             <address class="footer-address">
                 <ul class="adress-list">
                     <li class="adress-loc"> 
