--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header class="heading">
-        <a href="./index.html" class="heading-logo">WebStudio</a>
+        <a href="./index.html" class="heading-logo">Web<span class="heading-studio">Studio</span></a>
         <nav class="heading-nav">
             <ul class="heading-list">
-                <li class="heading-item"><a href="" class="heading-link">Студия</a></li>
+                <li class="heading-item"><a href="./index.html" class="heading-link">Студия</a></li>
                 <li class="heading-item"><a href="./portfolio.html" class="heading-link">Портфолио</a></li>   
                 <li class="heading-item"><a href="" class="heading-link">Контакты</a></li>
             </ul>
@@ -56,21 +56,21 @@
             <ul class="project-list">
                 <li class="project-items">
                     <img 
-                     src="/images/img-4.jpg" 
+                     src="./images/img-4.jpg" 
                      alt="печатает на клавиатуре"
                      width="370"
                      height="294">
                 </li>
                 <li class="project-items">
                     <img 
-                     src="/images/img-2-2.jpg" 
+                     src="./images/img-2-2.jpg" 
                      alt="девушка смотрит в ноутбук"
                      width="370"
                      height="294">
                 </li>
                 <li class="project-items">
                     <img 
-                     src="/images/img-3-2.jpg" 
+                     src="./images/img-3-2.jpg" 
                      alt="девушка смотрит на планшет"
                      width="370"
                      height="294">
@@ -82,7 +82,7 @@
             <ul class="team-list">
                 <li class="team-item">
                     <img 
-                     src="/images/img-5-2.jpg" 
+                     src="./images/img-5-2.jpg" 
                      alt="product designer" 
                      width="270" 
                      height="260">
@@ -91,7 +91,7 @@
                 </li>
                 <li class="team-item">
                     <img 
-                     src="/images/img-6-2.jpg" 
+                     src="./images/img-6-2.jpg" 
                      alt="frontend developer" 
                      width="270" 
                      height="260">
@@ -100,7 +100,7 @@
                 </li>
                 <li class="team-item">
                     <img 
-                     src="/images/img-7-2.jpg" 
+                     src="./images/img-7-2.jpg" 
                      alt="marketing" 
                      width="270" 
                      height="260">
@@ -109,7 +109,7 @@
                 </li>
                 <li class="team-item">
                     <img
-                     src="/images/img-8-2.jpg" 
+                     src="./images/img-8-2.jpg" 
                      alt="ui designer" 
                      width="270" 
                      height="260">
@@ -120,7 +120,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="" class="footer-logo">WebStudio</a>
+        <a href="" class="footer-logo">Web<span class="footer-studio">Studio</span></a>
         <address class="footer-address">
             <ul class="adress-list">
                 <li class="adress-loc"> 
