--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
            <h2 class="unvisible">Наши преимущества</h2>
             <ul class="features-list">
                 <li class="features-item">
-                    <p class="features-name">Внимание к деталям</p>
+                    <h3 class="features-name">Внимание к деталям</h3>
                     <p class="features-article">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="features-item">
-                    <p class="features-name">Пунктуальность</p>
+                    <h3 class="features-name">Пунктуальность</h3>
                     <p class="features-article">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <p class="features-name">Планирование</p>
+                    <h3 class="features-name">Планирование</h3>
                     <p class="features-article">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <p class="features-name">Современные технологии</p>
+                    <h3 class="features-name">Современные технологии</h3>
                     <p class="features-article">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
