--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
          <ul class="contact-list">
-             <li class="contact-site"><a href="info@devstudio.com" class="contact-site-link">info@devstudio.com</a></li>
+             <li class="contact-site"><a href="mailto:info@devstudio.com" class="contact-site-link">info@devstudio.com</a></li>
              <li class="contact-tel"><a href="tel:+380961111111" class="contact-tel-link">+38 096 111 11 11</a></li>
          </ul>
     </header>
@@ -130,7 +130,7 @@
                         class="adress-loc-text">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                 <li class="adress-site"> 
-                    <a href="info@example.com" class="adress-site-link">info@example.com</a>
+                    <a href="mailto:info@example.com" class="adress-site-link">info@example.com</a>
                 </li>
                 <li class="adress-tel"> 
                     <a href="tel:+380991111111" class="adress-tel-link">+38 099 111 11 11</a>
