--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
          <ul class="contact-list">
-             <li class="contact-site"><a href="info@devstudio.com" class="contact-site-link">info@devstudio.com</a></li>
+             <li class="contact-site"><a href="mailto:info@devstudio.com" class="contact-site-link">info@devstudio.com</a></li>
              <li class="contact-tel"><a href="tel:+380961111111" class="contact-tel-link">+38 096 111 11 11</a></li>
          </ul>
     </header>
