--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="./index.html" class="heading-logo">Web<span class="heading-studio">Studio</span></a>
         <nav class="heading-nav">
             <ul class="heading-list">
-                <li class="heading-item"><a href="./index.html" class="heading-link">Студия</a></li>
+                <li class="heading-item"><a href="./index.html" class="heading-link heading-vis">Студия</a></li>
                 <li class="heading-item"><a href="./portfolio.html" class="heading-link">Портфолио</a></li>   
                 <li class="heading-item"><a href="" class="heading-link">Контакты</a></li>
             </ul>
