--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <nav class="heading-nav">
             <ul class="heading-list">
                 <li class="heading-item"><a href="./index.html" class="heading-link">Студия</a></li>
-                <li class="heading-item"><a href="./portfolio.html" class="heading-link">Портфолио</a></li>   
+                <li class="heading-item"><a href="./portfolio.html" class="heading-link portfolio-vis">Портфолио</a></li>   
                 <li class="heading-item"><a href="" class="heading-link">Контакты</a></li>
             </ul>
         </nav>
@@ -145,7 +145,7 @@
                             class="adress-loc-text">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
                     <li class="adress-site"> 
-                        <a href="info@example.com" class="adress-site-link">info@example.com</a>
+                        <a href="mailto:info@example.com" class="adress-site-link">info@example.com</a>
                     </li>
                     <li class="adress-tel"> 
                         <a href="tel:+380991111111" class="adress-tel-link">+38 099 111 11 11</a>
